[gd_scene load_steps=3 format=2]

[ext_resource path="res://assests/Icons_Map.png" type="Texture" id=1]
[ext_resource path="res://src/interface/gui/MapBotom.gd" type="Script" id=2]

[node name="MapBotom" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 7.12695
margin_top = -32.8728
margin_right = 47.127
margin_bottom = 7.1272
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -7.41623
margin_top = -64.0974
margin_right = 248.584
margin_bottom = 191.903
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_exited" from="." to="." method="_on_MapBotom_mouse_exited"]
[connection signal="gui_input" from="TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_TextureRect_mouse_entered"]
